# iFridge_list

./: .gitignore  Dockerfile  README.md  app.py  auth.py  config.py  config_example.py  data.py  docker-compose.yml  main.py  pages.py  pyproject.toml  requirements.txt  streamlit_app.py
data_example/: cabinet.csv  example.csv  fridge_list.csv
pages/: cabinet_page.py  freezer_page.py  helpers.py  login_page.py  main_page.py  settings_page.py  stats_page.py
