[project]
name = "ifridge-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.4.0",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "cachetools==6.1.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "docutils==0.21.2",
    "fastapi==0.115.14",
    "frozenlist==1.7.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "ifaddr==0.2.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "markdown2==2.5.3",
    "markupsafe==3.0.2",
    "multidict==6.6.3",
    "narwhals==1.45.0",
    "nicegui==2.20.0",
    "numpy==2.3.1",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.3.0",
    "pillow==11.3.0",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "pscript==0.7.7",
    "pyarrow==20.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-engineio==4.12.2",
    "python-multipart==0.0.20",
    "python-socketio==5.13.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rpds-py==0.26.0",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "streamlit==1.46.1",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tornado==6.5.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "vbuild==0.8.2",
    "watchdog==6.0.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "wsproto==1.2.0",
    "yarl==1.20.1",
]
